<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.v3_372.afinal.ResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/total_set" />

    <EditText
        android:id="@+id/edtCountSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/time_set" />

    <EditText
        android:id="@+id/edtTimeSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/address_set" />

    <EditText
        android:id="@+id/edtAddressSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false" />


    <Button
        android:id="@+id/btnReturn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_return" />


</LinearLayout>
